# r-dash

./: .gitignore  Cargo.toml  README.md  SECURITY
src/: lib.rs  main.rs
src/array/: chunk.rs
